--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,13 @@ java {
 dependencies {
     implementation 'org.hibernate:hibernate-core:5.5.6.Final'
     runtimeOnly 'org.postgresql:postgresql:42.2.23'
-//    implementation 'com.vladmihalcea:hibernate-types-52:2.21.1'
     implementation 'org.slf4j:slf4j-api:2.0.13'
     implementation 'org.slf4j:slf4j-log4j12:2.0.13'
 
     compileOnly 'org.projectlombok:lombok:1.18.32'
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
+
+    annotationProcessor 'org.hibernate:hibernate-jpamodelgen:5.5.6.Final'
 
     testCompileOnly 'org.projectlombok:lombok:1.18.32'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
