--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,44 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '3.3.2'
+    id 'io.spring.dependency-management' version '1.1.6'
 }
 
-group = 'org.example'
-version = '1.0-SNAPSHOT'
+group = 'com.vchdev'
+version = '0.0.1-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
+
 dependencies {
-    implementation 'org.hibernate:hibernate-core:5.5.6.Final'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+    //implementation 'org.hibernate:hibernate-core:5.5.6.Final'
     runtimeOnly 'org.postgresql:postgresql:42.2.23'
-    implementation 'org.slf4j:slf4j-api:2.0.13'
-    implementation 'org.slf4j:slf4j-log4j12:2.0.13'
+    //implementation 'org.slf4j:slf4j-api:2.0.13'
+    //implementation 'org.slf4j:slf4j-log4j12:2.0.13'
 
     compileOnly 'org.projectlombok:lombok:1.18.32'
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
 
-    annotationProcessor 'org.hibernate:hibernate-jpamodelgen:5.5.6.Final'
+    //annotationProcessor 'org.hibernate:hibernate-jpamodelgen:5.5.6.Final'
 
     testCompileOnly 'org.projectlombok:lombok:1.18.32'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
