--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
-db.url=jdbc:postgresql://localhost:5432/postgres
-db.username=postgres
-db.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+logging.level.org.springframework.web=ERROR
+logging.level.com.vchdev=DEBUG
+logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+
+server.port=8080
