--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,9 @@ spring.datasource.password=postgres
 logging.level.org.springframework.web=ERROR
 logging.level.com.vchdev=DEBUG
 logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+logging.charset.console=UTF-8
 
 server.port=8080
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
