--- a/build.gradle
+++ b/build.gradle
@@ -30,15 +30,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
-    //implementation 'org.hibernate:hibernate-core:5.5.6.Final'
+    implementation "org.springframework.boot:spring-boot-starter-security"
+
     runtimeOnly 'org.postgresql:postgresql:42.2.23'
-    //implementation 'org.slf4j:slf4j-api:2.0.13'
-    //implementation 'org.slf4j:slf4j-log4j12:2.0.13'
 
     compileOnly 'org.projectlombok:lombok:1.18.32'
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
-
-    //annotationProcessor 'org.hibernate:hibernate-jpamodelgen:5.5.6.Final'
 
     testCompileOnly 'org.projectlombok:lombok:1.18.32'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
