--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ logging.level.com.vchdev=DEBUG
 logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 logging.charset.console=UTF-8
 
+logging.level.org.springframework.security=DEBUG
+
 server.port=8080
 
 spring.jpa.properties.hibernate.show_sql=true
