--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ server.port=8080
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# App Properties
+vch.app.jwtSecret= ======================Vch=Spring===========================
+vch.app.jwtExpirationMs= 86400000
