--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ dependencies {
 
     implementation "org.springframework.boot:spring-boot-starter-security"
 
+    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.12.6'
+
+
     runtimeOnly 'org.postgresql:postgresql:42.2.23'
 
     compileOnly 'org.projectlombok:lombok:1.18.32'
